2018-06-22  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/NEWS: Added an entry about addition of DOC/BUILD.windows.
* DOC/NEWS, DOC/TODO, DOC/USAGE, .cvsignore, Makefile.in,
  android/jni/Android.mk.in, atari.[ch], atari800.man, configure.ac,
  dc/Mahefile.dc, devices.c, emuos.*, esc.c, memory.c,
  roms/altirra_5200_os.[ch], win32/msc/Makefile: Removed EmuOS.


2018-06-10  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/BUILD.windows, DOC/INSTALL: Extracted Windows-specific instructions
  to a separate document. Added instructions on building with MSYS2.


2018-06-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* android/jni/androidinput.[ch], android/jni/graphics.c, android/jni/jni.c,
  android/jni/platform.c, android/jni/sound.c: Fixed
  -Wimplicit-function-declaration warnings.
* android/jni/androidinput.[ch]: Fixed -Wimplicit-int, -Wunused-comparison,
  -Wbitwise-op-parentheses, -Wtautological-constant-out-of-range-compare and
  -Wparentheses warnings.
* android/jni/androidinput.c, android/jni/graphics.c: Fixed -Wswitch warnings.
* android/jni/androidinput.c, android/jni/jni.c: Fixed -Wdangling-else warnings.
* android/jni/jni.c: Fixed -Wpointer-sign and -Wreturn-type warnings.
* android/jni/keys.inc: Disabled many -Winitializer-overrides warnings.
* atari.c: Fixed a -Wtautological-constant-out-of-range-compare warning.
* ui.c: Fixed a -Wformat-truncation warning.
* monitor.c: Fixed a -Wformat warning.
* dos/vga_gfx.c, img_tape.c: Fixed -Wstringop-truncation warnings.
* ide.c: Fixed a -Wmultistatement-macros warning.
* antic.c, configure.ac: Fixed -Wpointer-to-int-cast warnings.
* Makefile.in: Disable an unavoidable -Wpedantic warning in dos/dos_sb.c.
  Add the src/roms/ directory to make clean.
* devices.c: struct stat.st_time and time_t may have different size on some
  platforms.


2018-06-02  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cassette.c, devices.c, esc.c, sio.c: Added support for SIO patches in
  AltirraOS 800/XL.